--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,9 +11,8 @@ body {
 }
 
 html {
-  font-family: $serif-primary;
+  font-family: $baskerville;
   font-size: 14px;
-  overflow-y: scroll;
 
   @media (min-width: 600px) {
     font-size: 16px;
@@ -31,7 +30,7 @@ h4,
 h5,
 h6 {
   color: $default-shade;
-  font-family: $sans-serif;
+  font-family: $sans-font;
   line-height: normal;
 }
 
