--- a/_sass/_catalogue.scss
+++ b/_sass/_catalogue.scss
@@ -2,7 +2,7 @@
   &-item {
     border-bottom: 1px solid $grey-2;
     color: $default-color;
-    display: block;
+    display: inline-block;
     padding: 2rem 0;
 
     &:hover .catalogue-line,
@@ -15,22 +15,16 @@
     }
   }
 
-  &-pinned {
-    color: $default-tint;
-    font-family: $serif-secondary;
-    letter-spacing: .5px;
-  }
-
   &-time {
     color: $default-tint;
-    font-family: $serif-secondary;
+    font-family: $palatino;
     letter-spacing: .5px;
   }
 
   &-title {
     color: $default-shade;
     display: block;
-    font-family: $sans-serif;
+    font-family: $sans-font;
     font-size: 2rem;
     font-weight: 700;
     margin: .5rem 0;
