--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,9 @@
           <h2 class="nav-title">{{ site.title }}</h2>
         </a>
         <ul>
+          <li><a href="{{ site.baseurl }}/">2025</a></li>
+          <li><a href="{{ site.baseurl }}/">2024</a></li>
           <li><a href="{{ '/About/' | prepend: site.url }}">About</a></li>
-          <li><a href="{{ site.baseurl }}/">Posts</a></li>
         </ul>
     </div>
   </nav>
@@ -22,7 +23,7 @@
 
     <footer>
       <span>
-        &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}. Made with Jekyll using the <a href="https://github.com/chesterhow/tale/">Tale</a> theme.
+        &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}.BUG
       </span>
     </footer>
   </body>
