--- a/_sass/_anse.scss
+++ b/_sass/_anse.scss
@@ -1,7 +1,7 @@
 body {
-  background-color: #121212; /* 设置整体背景为暗色 */
-  color: #ffffff;           /* 设置文字颜色为白色 */
+  background-color: #121212; /* 暗色背景 */
+  color: #f1f1f1;           /* 更亮的文字颜色 */
 }
 a {
-  color: #1e90ff;            /* 设置链接文字颜色（深度蓝色） */
+  color: #69b3ff;            /* 更亮的链接颜色 */
 }
