--- a/_sass/_anse.scss
+++ b/_sass/_anse.scss
@@ -1,6 +1,6 @@
 /* 全局样式 */
 body {
-  background-color: hsl(200, 5%, 15%); /* 背景亮度50% */
+  background-color: hsl(200, 5%, 40%); /* 背景亮度50% */
   color: #ffffff; /* 全局字体颜色为纯白 */
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5); /* 添加阴影增强清晰度 */
 }
@@ -17,8 +17,16 @@ h1, h2, h3, h4, h5, h6 {
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
 }
 
-/* 单独处理 .catalogue-title 类 */
+
 h1.catalogue-title {
+  color: #ffffff !important; /* 强制字体为白色 */
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
+}
+h1.post-title {
+  color: #ffffff !important; /* 强制字体为白色 */
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
+}
+h1.nav-title {
   color: #ffffff !important; /* 强制字体为白色 */
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
 }
