--- a/_sass/_anse.scss
+++ b/_sass/_anse.scss
@@ -1,6 +1,6 @@
 /* 全局样式 */
 body {
-  background-color: hsl(200, 5%, 20%); /* 背景亮度50% */
+  background-color: hsl(200, 5%, 30%); /* 背景亮度50% */
   color: #ffffff; /* 全局字体颜色为纯白 */
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5); /* 添加阴影增强清晰度 */
 }
@@ -10,7 +10,14 @@ p {
   color: #ffffff;
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
 }
-
+span{
+  color: #ffffff;
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+}
+div{
+  color: #ffffff;
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+}
 /* 针对标题 */
 h1, h2, h3, h4, h5, h6 {
   color: #ffffff;
