--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="shortcut icon" href="img/favicon.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>
