--- a/_sass/_anse.scss
+++ b/_sass/_anse.scss
@@ -35,10 +35,40 @@ h2.nav-title {
   color: #ffffff !important; /* 强制字体为白色 */
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
 }
-
 /* 针对链接样式 */
 a {
   color: #ffffff !important; /* 链接字体颜色调整为白色 */
   text-decoration: underline;
   font-weight: bold;
+}
+
+pre.highlighter-rouge {
+  padding: 10px;
+  border-radius: 5px;
+  overflow-x: auto;
+  font-family: 'Courier New', monospace;
+}
+.language-info {
+  background-color: #e7f4f9; /* 浅蓝色背景，非常符合信息提示 */
+  color: #31708f; /* 深蓝色字体，更好地与背景对比 */
+  border-left: 5px solid #bce8f1; /* 左边栏，增强信息视觉提示 */
+  padding: 10px;
+  border-radius: 4px;
+  font-family: 'Arial', sans-serif; /* 比代码更通用的字体，适合信息显示 */
+  margin: 10px 0;
+}
+
+.language-php {
+  background-color: #2c3e50; /* 深蓝色背景 */
+  color: #ecf0f1; /* 亮灰色字体 */
+}
+
+.language-java {
+  background-color: #f7df1e; /* 浅黄色背景 */
+  color: #333333; /* 深色字体 */
+}
+
+.language-python {
+  background-color: #306998; /* Python 蓝色 */
+  color: #ffffff; /* 白色字体 */
 }
