--- a/styles.scss
+++ b/styles.scss
@@ -3,6 +3,7 @@
 # only main files contain this front matter, not partials.
 ---
 @import "anse";
+@import "highlight";
 @import 'variables';
 @import 'base';
 @import 'code';
