--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
   <div class="post-info">
-    <span>bypass&nbsp;</span>{{ page.author }}
+    <span>bypass{{ page.author }}</span>
 
     {% if page.date %}
       <br>
