--- a/_sass/_anse.scss
+++ b/_sass/_anse.scss
@@ -13,7 +13,7 @@ span{
   color: #ffffff !important; /* 强制字体为白色 */
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
 }
-div{
+div.post-line{
   color: #ffffff !important; /* 强制字体为白色 */
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
 }
