--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         </a>
         <ul>
           <li><a href="{{ site.baseurl }}/">2025</a></li>
-          <li><a href="{{ site.baseurl }}/">2024</a></li>
+          <li><a href="{{ '/2024/' | prepend: site.url }}">2024</a></li>
           <li><a href="{{ '/About/' | prepend: site.url }}">About</a></li>
         </ul>
     </div>
