--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
           <h2 class="nav-title">{{ site.title }}</h2>
         </a>
         <ul>
-          <li><a href="{{ site.baseurl }}/">2025</a></li>
+          <li><a href="{{ '/2025/' | prepend: site.url }}">2025</a></li>
           <li><a href="{{ '/2024/' | prepend: site.url }}">2024</a></li>
           <li><a href="{{ '/About/' | prepend: site.url }}">About</a></li>
         </ul>
