--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,11 @@
           <h2 class="nav-title">{{ site.title }}</h2>
         </a>
         <ul>
+
           <li><a href="{{ '/2025/' | prepend: site.url }}">2025</a></li>
           <li><a href="{{ '/2024/' | prepend: site.url }}">2024</a></li>
+          <li><a href="{{ '/Java专题/' | prepend: site.url }}">Java专题</a></li>
+          <li><a href="{{ '/PHP专题/' | prepend: site.url }}">PHP专题</a></li>
           <li><a href="{{ '/About/' | prepend: site.url }}">About</a></li>
         </ul>
     </div>
