--- a/_sass/_anse.scss
+++ b/_sass/_anse.scss
@@ -53,49 +53,144 @@ a {
   }
 }
 
-/* 触控友好优化 */
-.pagination-arrow {
-  padding: 0.8rem;
-  min-width: 44px; /* WCAG触控最小尺寸 */
+
+
+//弄耸呢
+
+code[class*="language-"],
+pre[class*="language-"] {
+  color: #c5c8c6;
+  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+  font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
+  direction: ltr;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  line-height: 1.5;
+
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
 }
 
-
-
-
-/* 极简版本 */
-.pagination-current {
-  display: inline-flex;
-  align-items: center;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
-  font-size: 0.95rem;
-  color: #666;
-  padding: 0.25rem 0;
+/* Code blocks */
+pre[class*="language-"] {
+  padding: 1em;
+  margin: .5em 0;
+  overflow: auto;
 }
 
-.current {
-  color: #222;
-  font-weight: 600;
-  margin-right: 0.4rem;
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  background: #1d1f21;
 }
 
-.separator {
-  color: #ddd;
-  margin-right: 0.4rem;
-  transform: translateY(-1px);
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+  padding: .1em;
+  border-radius: .3em;
 }
 
-.total {
-  color: #888;
-  font-weight: 500;
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: #7C7C7C;
 }
 
-/* 增加交互反馈 */
-@media (hover: hover) {
-  .pagination-current .current {
-    transition: color 0.2s;
-    cursor: default;
-  }
-  .pagination-current:hover .current {
-    color: #007bff; /* 品牌色建议 */
-  }
+.token.punctuation {
+  color: #c5c8c6;
 }
+
+.namespace {
+  opacity: .7;
+}
+
+.token.property,
+.token.keyword,
+.token.tag {
+  color: #96CBFE;
+}
+
+.token.class-name {
+  color: #FFFFB6;
+  text-decoration: underline;
+}
+
+.token.boolean,
+.token.constant {
+  color: #99CC99;
+}
+
+.token.symbol,
+.token.deleted {
+  color: #f92672;
+}
+
+.token.number {
+  color: #FF73FD;
+}
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #A8FF60;
+}
+
+.token.variable {
+  color: #C6C5FE;
+}
+
+.token.operator {
+  color: #EDEDED;
+}
+
+.token.entity {
+  color: #FFFFB6;
+  cursor: help;
+}
+
+.token.url {
+  color: #96CBFE;
+}
+
+.language-css .token.string,
+.style .token.string {
+  color: #87C38A;
+}
+
+.token.atrule,
+.token.attr-value {
+  color: #F9EE98;
+}
+
+.token.function {
+  color: #DAD085;
+}
+
+.token.regex {
+  color: #E9C062;
+}
+
+.token.important {
+  color: #fd971f;
+}
+
+.token.important,
+.token.bold {
+  font-weight: bold;
+}
+
+.token.italic {
+  font-style: italic;
+}
+
