--- a/_sass/_anse.scss
+++ b/_sass/_anse.scss
@@ -57,8 +57,8 @@ a {
 
 //弄耸呢
 
-code[class*="language-"],
-pre[class*="language-"] {
+code[class="highlight"],
+pre[class="highlight"] {
   color: #c5c8c6;
   text-shadow: 0 1px rgba(0, 0, 0, 0.3);
   font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
@@ -80,19 +80,19 @@ pre[class*="language-"] {
 }
 
 /* Code blocks */
-pre[class*="language-"] {
+pre[class="highlight"] {
   padding: 1em;
   margin: .5em 0;
   overflow: auto;
 }
 
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
+:not(pre) > code[class="highlight"],
+pre[class="highlight"] {
   background: #1d1f21;
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
+:not(pre) > code[class="highlight"] {
   padding: .1em;
   border-radius: .3em;
 }
