--- a/_sass/_anse.scss
+++ b/_sass/_anse.scss
@@ -1,46 +1,10 @@
 /* 全局样式 */
-//body {
-//  background-color: hsl(200, 5%, 20%); /* 背景亮度50% */
-//  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5); /* 添加阴影增强清晰度 */
-//}
-
-/* 针对段落 */
-p {
-  color: #ffffff !important; /* 强制字体为白色 */
-  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
-}
-span{
-  color: #ffffff !important; /* 强制字体为白色 */
-  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
-}
-div.post-line{
-  color: #ffffff !important; /* 强制字体为白色 */
-  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
-}
-/* 针对标题 */
-h1, h2, h3, h4, h5, h6 {
-  color: #ffffff !important; /* 强制字体为白色 */
-  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
+body {
+  background-color: hsl(200, 5%, 20%); /* 背景亮度50% */
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5); /* 添加阴影增强清晰度 */
 }
 
-h1.catalogue-title {
-  color: #ffffff !important; /* 强制字体为白色 */
-  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
-}
-h1.post-title {
-  color: #ffffff !important; /* 强制字体为白色 */
-  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
-}
-h2.nav-title {
-  color: #ffffff !important; /* 强制字体为白色 */
-  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
-}
-/* 针对链接样式 */
-a {
-  color: #ffffff !important; /* 链接字体颜色调整为白色 */
-  text-decoration: underline;
-  font-weight: bold;
-}
+
 //看nm
 /* 基础排版增强 */
 .catalogue-item {
