--- a/_sass/_anse.scss
+++ b/_sass/_anse.scss
@@ -57,8 +57,8 @@ a {
 
 //弄耸呢
 
-code[class="highlight"],
-pre[class="highlight"] {
+code[class="language-java highlighter-rouge"],
+pre[class="language-java highlighter-rouge"] {
   color: #c5c8c6;
   text-shadow: 0 1px rgba(0, 0, 0, 0.3);
   font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
@@ -86,13 +86,13 @@ pre[class="highlight"] {
   overflow: auto;
 }
 
-:not(pre) > code[class="highlight"],
-pre[class="highlight"] {
+:not(pre) > code[class="language-java highlighter-rouge"],
+pre[class="language-java highlighter-rouge"] {
   background: #1d1f21;
 }
 
 /* Inline code */
-:not(pre) > code[class="highlight"] {
+:not(pre) > code[class="language-java highlighter-rouge"] {
   padding: .1em;
   border-radius: .3em;
 }
