--- a/_sass/_anse.scss
+++ b/_sass/_anse.scss
@@ -57,7 +57,7 @@ a {
 
 //弄耸呢
 
-code[class="language-java highlighter-rouge"],
+div[class="language-java highlighter-rouge"],
 pre[class="language-java highlighter-rouge"] {
   color: #c5c8c6;
   text-shadow: 0 1px rgba(0, 0, 0, 0.3);
