--- a/_sass/_anse.scss
+++ b/_sass/_anse.scss
@@ -1,196 +1,57 @@
 /* 全局样式 */
-//body {
-//  background-color: hsl(200, 5%, 20%); /* 背景亮度50% */
-//  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5); /* 添加阴影增强清晰度 */
-//}
-//
-///* 针对段落 */
-//p {
-//  color: #ffffff !important; /* 强制字体为白色 */
-//  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
-//}
-//span{
-//  color: #ffffff !important; /* 强制字体为白色 */
-//  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
-//}
-//div.post-line{
-//  color: #ffffff !important; /* 强制字体为白色 */
-//  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
-//}
-///* 针对标题 */
-//h1, h2, h3, h4, h5, h6 {
-//  color: #ffffff !important; /* 强制字体为白色 */
-//  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
-//}
-//
-//h1.catalogue-title {
-//  color: #ffffff !important; /* 强制字体为白色 */
-//  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
-//}
-//h1.post-title {
-//  color: #ffffff !important; /* 强制字体为白色 */
-//  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
-//}
-//h2.nav-title {
-//  color: #ffffff !important; /* 强制字体为白色 */
-//  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
-//}
-///* 针对链接样式 */
-//a {
-//  color: #ffffff !important; /* 链接字体颜色调整为白色 */
-//  text-decoration: underline;
-//  font-weight: bold;
-//}
-//看nm
-/* 基础排版增强 */
-//.catalogue-item {
-//  break-inside: avoid; /* 防止内容断裂 */
-//}
-///* 暗黑模式支持 */
-//@media (prefers-color-scheme: dark) {
-//  .catalogue-time {
-//    color: #a0aec0;
-//  }
-//}
-
-
-
-//弄耸呢
-
-div[class="language-java highlighter-rouge"],
-pre[class="language-java highlighter-rouge"] {
-  color: #c5c8c6;
-  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-  font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
-  direction: ltr;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  line-height: 1.5;
-
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
+body {
+  background-color: hsl(200, 5%, 20%); /* 背景亮度50% */
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5); /* 添加阴影增强清晰度 */
 }
 
-/* Code blocks */
-pre[class="highlight"] {
-  padding: 1em;
-  margin: .5em 0;
-  overflow: auto;
+/* 针对段落 */
+p {
+  color: #ffffff !important; /* 强制字体为白色 */
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
+}
+span{
+  color: #ffffff !important; /* 强制字体为白色 */
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
+}
+div.post-line{
+  color: #ffffff !important; /* 强制字体为白色 */
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
+}
+/* 针对标题 */
+h1, h2, h3, h4, h5, h6 {
+  color: #ffffff !important; /* 强制字体为白色 */
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
 }
 
-:not(pre) > code[class="language-java highlighter-rouge"],
-pre[class="language-java highlighter-rouge"] {
-  background: #1d1f21;
+h1.catalogue-title {
+  color: #ffffff !important; /* 强制字体为白色 */
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
 }
-
-/* Inline code */
-:not(pre) > code[class="language-java highlighter-rouge"] {
-  padding: .1em;
-  border-radius: .3em;
+h1.post-title {
+  color: #ffffff !important; /* 强制字体为白色 */
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
 }
-
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-  color: #7C7C7C;
+h2.nav-title {
+  color: #ffffff !important; /* 强制字体为白色 */
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5) !important; /* 强制增加阴影，保持清晰度 */
 }
-
-.token.punctuation {
-  color: #c5c8c6;
-}
-
-.namespace {
-  opacity: .7;
-}
-
-.token.property,
-.token.keyword,
-.token.tag {
-  color: #96CBFE;
-}
-
-.token.class-name {
-  color: #FFFFB6;
+/* 针对链接样式 */
+a {
+  color: #ffffff !important; /* 链接字体颜色调整为白色 */
   text-decoration: underline;
-}
-
-.token.boolean,
-.token.constant {
-  color: #99CC99;
-}
-
-.token.symbol,
-.token.deleted {
-  color: #f92672;
-}
-
-.token.number {
-  color: #FF73FD;
-}
-
-.token.selector,
-.token.attr-name,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
-  color: #A8FF60;
-}
-
-.token.variable {
-  color: #C6C5FE;
-}
-
-.token.operator {
-  color: #EDEDED;
-}
-
-.token.entity {
-  color: #FFFFB6;
-  cursor: help;
-}
-
-.token.url {
-  color: #96CBFE;
-}
-
-.language-css .token.string,
-.style .token.string {
-  color: #87C38A;
-}
-
-.token.atrule,
-.token.attr-value {
-  color: #F9EE98;
-}
-
-.token.function {
-  color: #DAD085;
-}
-
-.token.regex {
-  color: #E9C062;
-}
-
-.token.important {
-  color: #fd971f;
-}
-
-.token.important,
-.token.bold {
   font-weight: bold;
 }
-
-.token.italic {
-  font-style: italic;
+//看nm
+/* 基础排版增强 */
+.catalogue-item {
+  break-inside: avoid; /* 防止内容断裂 */
 }
+/* 暗黑模式支持 */
+@media (prefers-color-scheme: dark) {
+  .catalogue-time {
+    color: #a0aec0;
+  }
+}
+
+
 
