--- a/_sass/_highlight.scss
+++ b/_sass/_highlight.scss
@@ -1,30 +1,11 @@
 pre {
   background-color: #212326; /* IDE 样式黑色背景 */
-  //color: #d4d4d4; /* 默认字体颜色 */
+  color: #d4d4d4; /* 默认字体颜色 */
   padding: 15px;
   border-radius: 5px;
   overflow-x: auto;
-  //font-family: Menlo, "Meslo LG", monospace; /* 等宽字体 */
+  font-family: Menlo, "Meslo LG", monospace; /* 等宽字体 */
   font-size: 14px;
-
-  color: #c5c8c6;
-  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-  font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
-  direction: ltr;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  line-height: 1.5;
-
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
 }
 /* 关键字高亮 */
 .keyword { color: #569cd6; }
