--- a/_sass/_highlight.scss
+++ b/_sass/_highlight.scss
@@ -1,137 +1,10 @@
-pre {
-  background-color: #212326; /* IDE 样式黑色背景 */
-  color: #d4d4d4; /* 默认字体颜色 */
-  padding: 15px;
-  border-radius: 5px;
-  overflow-x: auto;
-  font-family: Menlo, "Meslo LG", monospace; /* 等宽字体 */
-  font-size: 14px;
-}
-/* 关键字高亮 */
-.keyword { color: #569cd6; }
-/* 字符串高亮 */
-.string { color: #ce9178; }
-/* 数字高亮 */
-.number { color: #b5cea8; }
-/* 注释高亮 */
-.comment { color: #6a9955; font-style: italic; }
-/* 函数名高亮 */
-.function { color: #dcdcaa; }
-/* 操作符高亮 */
-.operator { color: #d4d4d4; }
-//弄耸呢
-
-pre {
-  padding: 1em;
-  margin: .5em 0;
-  overflow: auto;
-}
-
-:not(pre) > code,
-pre {
-  background: #1d1f21;
-}
-
-/* Inline code */
-:not(pre) > code {
-  padding: .1em;
-  border-radius: .3em;
-}
-
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-  color: #7C7C7C;
-}
-
-.token.punctuation {
-  color: #c5c8c6;
-}
-
-.namespace {
-  opacity: .7;
-}
-
-.token.property,
-.token.keyword,
-.token.tag {
-  color: #96CBFE;
-}
-
-.token.class-name {
-  color: #FFFFB6;
-  text-decoration: underline;
-}
-
-.token.boolean,
-.token.constant {
-  color: #99CC99;
-}
-
-.token.symbol,
-.token.deleted {
-  color: #f92672;
-}
-
-.token.number {
-  color: #FF73FD;
-}
-
-.token.selector,
-.token.attr-name,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
-  color: #A8FF60;
-}
-
-.token.variable {
-  color: #C6C5FE;
-}
-
-.token.operator {
-  color: #EDEDED;
-}
-
-.token.entity {
-  color: #FFFFB6;
-  cursor: help;
-}
-
-.token.url {
-  color: #96CBFE;
-}
-
-.language-css .token.string,
-.style .token.string {
-  color: #87C38A;
-}
-
-.token.atrule,
-.token.attr-value {
-  color: #F9EE98;
-}
-
-.token.function {
-  color: #DAD085;
-}
-
-.token.regex {
-  color: #E9C062;
-}
-
-.token.important {
-  color: #fd971f;
-}
-
-.token.important,
-.token.bold {
-  font-weight: bold;
-}
-
-.token.italic {
-  font-style: italic;
-}
-
+//pre {
+//  background-color: #212326; /* IDE 样式黑色背景 */
+//  color: #d4d4d4; /* 默认字体颜色 */
+//  padding: 15px;
+//  border-radius: 5px;
+//  overflow-x: auto;
+//  font-family: Menlo, "Meslo LG", monospace; /* 等宽字体 */
+//  font-size: 14px;
+//}
+//pre code.hljs{display:block;overflow-x:auto;padding:1em}code.hljs{padding:3px 5px}.hljs{background:#f3f3f3;color:#444}.hljs-comment{color:#697070}.hljs-punctuation,.hljs-tag{color:#444a}.hljs-tag .hljs-attr,.hljs-tag .hljs-name{color:#444}.hljs-attribute,.hljs-doctag,.hljs-keyword,.hljs-meta .hljs-keyword,.hljs-name,.hljs-selector-tag{font-weight:700}.hljs-deletion,.hljs-number,.hljs-quote,.hljs-selector-class,.hljs-selector-id,.hljs-string,.hljs-template-tag,.hljs-type{color:#800}.hljs-section,.hljs-title{color:#800;font-weight:700}.hljs-link,.hljs-operator,.hljs-regexp,.hljs-selector-attr,.hljs-selector-pseudo,.hljs-symbol,.hljs-template-variable,.hljs-variable{color:#ab5656}.hljs-literal{color:#695}.hljs-addition,.hljs-built_in,.hljs-bullet,.hljs-code{color:#397300}.hljs-meta{color:#1f7199}.hljs-meta .hljs-string{color:#38a}.hljs-emphasis{font-style:italic}.hljs-strong{font-weight:700}
